styles/styles.css
/* ... */
.landing-pages {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.landing-page-conversation {
  padding: 1rem 0;
}

.landing-options {
  grid-template-columns: auto;
  padding: 4rem;
}

.dashboard-organization {
  display: grid;
  grid-template-columns: 1fr;
  padding: 3rem;
}

.organization-wireframes {
  margin: auto;
  padding-bottom: 2rem;
}

.user-request-conversation {
  padding: 1rem 0;
}

.dashboard-organization-conversation {
  padding: 1rem 0;
}

.project-conclusion-text {
  padding: 1rem 0;
}

/*MOBILE BIOGRAPHY*/

.bio-about-me-picture {
  background-color: #dedaf5;
}

.bio-about-me-picture h1 {
  text-align: center;
}

.architecture-first {
  background-color: #dedaf5;
}

.personal-third {
  background-color: #dedaf5;
}

.bio-content p {
  padding: 2rem 0;
}

.icon-left {
  padding: 3rem 0;
}

#bunk {
  display: block;
  border-radius: 50%;
  margin-left: auto;
  margin-right: auto;
  max-width: 20rem;
  padding: 3rem 0;
}

.bio-about-me-picture {
  padding-top: 2rem;
}

.golf-to-film {
  align-items: center;
  display: flex;
  flex-direction: row;
  margin: auto;
  max-width: 20rem;
  padding: 3rem 0;
}
.emoji {
  text-align: center;
}

.bio-section-header {
  color: #290cdc;
  text-align: center;
}

.content-two {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: auto;
  padding: 3rem 0;
}

.content-three {
  display: grid;
  grid-template-columns: 1fr;
}

.content-row {
  padding: 0rem 2rem;
}

.mini-subhead {
  font-weight: 700;
  line-height: 1.3;
  padding: 1rem 0;
  text-align: center;
}

.golf-group {
  display: block;
  max-width: 80%;
  margin: auto;
  padding: 2rem 2rem 3rem 2rem;
}

.school {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  padding: 3rem;
}

.architect,
.film {
  margin: auto;
}

.bio-italics {
  font-style: italic;
  font-weight: 300;
  line-height: 1.4;
  padding: 3rem 2rem;
}

.content-two {
  padding: 3rem 0;
}

.why-design,
.designer,
.storyboard,
.frustrated,
.chaplin,
.privacy {
  display: block;
  margin: auto;
  padding: 2rem;
}

.design-frustration {
  display: grid;
  grid-template-columns: auto;
}

.design-characters {
  display: grid;
  grid-template-columns: auto;
}

.bio-align-three {
  display: flex;
  flex-direction: column;
}

.privacy-future {
  display: grid;
  grid-template-columns: auto;
}

/* VILLAGE MOBILE */

.case-study-content-borders {
  padding: 0 2rem;
  margin: auto;
}

.bold {
  font-weight: 700;
  text-transform: uppercase;
}

.village-quote {
  font-style: italic;
  font-weight: 700;
  color: #285835;
}

.village-logo {
  margin: auto;
  padding: 2rem 0;
}

#village-case-study-title {
  color: #0e0b06;
  padding: 7rem 0 3rem;
}

.village-who-did-this {
  letter-spacing: 0.5rem;
}

.village-project-duration {
  text-align: center;
}

.village-section-header {
  color: #3f1fbd;
  align-items: center;
  display: flex;
  justify-content: center;
  padding: 2rem 0;
  text-align: center;
  text-transform: capitalize;
  /*header line below 1 of 3 https://www.trysmudford.com/blog/css-header-legend */
  width: 100%;
}

.project-introduction h3 {
  padding: 2rem 0;
  text-align: center;
  line-height: 1.3;
}

.project-introduction h1 {
  text-align: center;
}

.village-problem-statement {
  font-weight: 300;
  letter-spacing: 0.5rem;
  padding: 3rem 0;
  text-align: center;
  text-transform: uppercase;
  text-align: center;
}

#village-project-overview p {
  padding-bottom: 2rem 0;
}

.village-center-percentages {
  text-align: center;
  padding: 5rem 0 1rem 0;
}

.village-chart-number {
  color: #285835;
  font-size: 6rem;
  font-weight: 700;
}

.village-chart-explanation {
  text-align: center;
}

.village-deliverables-list h3 {
  padding: 2rem 0;
  text-decoration: underline;
}

.case-study-performed {
  font-size: 1.6rem;
  font-weight: 300;
  line-height: 2rem;
  list-style: disc;
  list-style-position: inside;
  padding: 0.5rem 0;
  text-align: left;
  text-transform: none;
}

.current-products-used {
  font-weight: 300;
}

.village-what-is-used {
  padding: 1.5rem 0;
}

.village-product-attributes {
  font-size: 1.6rem;
  line-height: 1.5;
  list-style: disc;
  list-style-position: inside;
  padding: 0.5rem;
}

.village-products {
  padding: 2rem 0;
  text-align: center;
}

/* ADDED SPECIFIC CLASS and H/W TO LOGOS */

.village-logo-placement {
  text-align: center;
}

.village-product-one,
.village-product-two,
.village-product-three {
  padding: 5rem 0;
}

.village-shutterfly {
  height: 20rem;
  width: 20rem;
}

.village-class-dojo {
  height: 20rem;
  width: 22rem;
}

.village-gmail {
  height: 20rem;
  width: 35rem;
}

.village-user-function-needs {
  text-align: center;
  padding: 3rem 0;
}

.village-key-takeaways {
  color: #285835;
  font-weight: 300;
  padding: 5rem 0;
  text-align: center;
}

.village-section-thoughts {
  color: #0e0b06;
  font-weight: 300;
  letter-spacing: 0.3rem;
  padding: 8rem 0;
  text-align: center;
  text-transform: uppercase;
}

#village-market-research h3 {
  padding: 3rem 0;
}

#village-market-research p {
  padding: 2rem 0;
}

.village-persona-picture {
  margin: auto;
}

.village-section-heading {
  font-weight: 700;
  padding: 2rem 0;
}

.village-user-name {
  padding: 2rem 0 1rem;
  color: #285835;
}

.village-who-is-this-persona {
  font-weight: 300;
  font-style: italic;
}

.village-user-function-needs {
  padding: 2rem 0;
  text-align: center;
}

#village-user-personas h5 {
  padding: 2rem 0;
}

.village-persona-intro {
  padding: 4rem 0;
  text-align: center;
}

.village-persona-one,
.village-persona-two,
.village-persona-three {
  margin: 2rem 0;
  padding: 0 0 2rem 0;
}

.village-user-sub-section-heading {
  color: #0e0b06;
  font-weight: 700;
  padding: 3rem 0;
}

.village-deep-dive {
  padding: 5rem 0 3rem 0;
  font-style: italic;
}

.village-process-label {
  padding: 2rem 0;
}

.village-user-path-intro {
  color: #0e0b06;
  padding: 4rem 0;
  text-align: center;
}
/* ... */

